--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   permission_handler: ^12.0.1
   qr_flutter: ^4.0.0
   window_manager: ^0.3.7
+  local_auth: ^2.1.0
+  flutter_secure_storage: ^9.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
