--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 6.1.0+2
+version: 6.1.1+3
 
 environment:
   sdk: ^3.10.7
@@ -45,6 +45,8 @@ dependencies:
   file_picker: ^8.0.0
   google_mlkit_barcode_scanning: ^0.13.0
   image_picker: ^1.0.4
+  font_awesome_flutter: ^10.8.0
+  url_launcher: ^6.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -116,7 +118,7 @@ msix_config:
   publisher_display_name: Priyanshu Priyam
   identity_name: PriyanshuPriyam.CipherAuth
   publisher: CN=535EC210-8E79-4123-A1BC-3B69A02701C8
-  msix_version: 6.1.0.0
+  msix_version: 6.1.1.0
   logo_path: assets/icon/icon.png
   architecture: x64
   store: true
