--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,7 @@ dependencies:
   zxing2: ^0.2.3
   file_picker: ^8.0.0
   google_mlkit_barcode_scanning: ^0.13.0
-  image_picker: ^1.0.4
-  font_awesome_flutter: ^10.8.0
+  image_picker: ^1.0.0
   url_launcher: ^6.2.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -79,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icon/
+    - assets/social/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
