--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_mlkit_barcode_scanning: ^0.13.0
   image_picker: ^1.0.0
   url_launcher: ^6.2.0
+  font_awesome_flutter: ^10.12.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
